@@ -17,6 +17,8 @@
 11. Add (server side) option to enable playlist images.
 12. When prompting for discs to add to queue use '0' for 'All discs'.
 13. Fix padding in 'Manage players' dialog.
+14. If JSONRPC calls fail and no player is attached then show a warning
+    message indicating this.
 
 5.8.3
 -----
